订单详情、发货、购物车

--- a/address.html
+++ b/address.html
@@ -37,14 +37,11 @@
                         <a href="shop_cart.html">购物车</a>
                         <sup>{{cartCount}}</sup>
                     </li>
-                    <li>|</li>
+                    <!-- <li>|</li>
                     <li>
-                        <a href="javascript:void(0)">
-                            <img src="images/favorite_icon.png" alt="">收藏夹</a>
+                        <a href="javascript:void(0)"><img src="images/favorite_icon.png" alt="">收藏夹</a>
                     </li>
-                    <li>
-                        <a href="javascript:void(0)">服务中心</a>
-                    </li>
+                    <li><a href="javascript:void(0)">服务中心</a></li> -->
                 </ul>
             </div>
         </div>
@@ -177,16 +174,16 @@
                     <li>
                         <a href="index.html">首页</a>
                     </li>
-                    <li :class="{active:subnavText==='商品列表'}">
+                    <li>
                         <a href="shop_list.html?type=商品列表">商品列表</a>
                     </li>
-                    <li :class="{active:subnavText==='炊具炖锅'}">
+                    <li>
                         <a href="shop_list.html?type=炊具炖锅">炊具炖锅</a>
                     </li>
-                    <li :class="{active:subnavText==='厨房小电'}">
+                    <li>
                         <a href="shop_list.html?type=厨房小电">厨房小电</a>
                     </li>
-                    <li :class="{active:subnavText==='爆款推荐'}">
+                    <li>
                         <a href="shop_list.html?type=爆款推荐">爆款推荐</a>
                     </li>
                 </ul>
