--- a/shop_list.html
+++ b/shop_list.html
@@ -15,36 +15,25 @@
         <div class="top">
             <div class="containe">
                 <div class="left">
-                    <a href="index.html">
-                        <img src="images/home_icon.png" alt="">文的首页</a>
+                    <a href="index.html"><img src="images/home_icon.png" alt="">文的首页</a>
                     |
                     <span class="loginzt">
                         <a href="login.html" v-if="!isLogin">登录</a>
                         &nbsp;&nbsp;&nbsp;&nbsp;
-                        <a href="#" v-if="isLogin" @click="logout">退出登录</a>
+                        <a  href="#" v-if="isLogin" @click="logout">退出登录</a>
                         <a href="register.html" v-else>免费注册</a>
                     </span>
                 </div>
                 <ul class="shop" v-if="isLogin">
-                    <li>
-                        <a href="order.html">我的订单</a>
-                    </li>
-                    <li>
-                        <a href="user.html">我的文的</a>
-                    </li>
+                    <li><a href="order.html">我的订单</a></li>
+                    <li><a href="user.html">我的文的</a></li>
                     <li>|</li>
+                    <li><a href="shop_cart.html">购物车</a><sup>{{cartCount}}</sup></li>
+                    <!-- <li>|</li>
                     <li>
-                        <a href="shop_cart.html">购物车</a>
-                        <sup>{{cartCount}}</sup>
+                        <a href="javascript:void(0)"><img src="images/favorite_icon.png" alt="">收藏夹</a>
                     </li>
-                    <li>|</li>
-                    <li>
-                        <a href="javascript:void(0)">
-                            <img src="images/favorite_icon.png" alt="">收藏夹</a>
-                    </li>
-                    <li>
-                        <a href="javascript:void(0)">服务中心</a>
-                    </li>
+                    <li><a href="javascript:void(0)">服务中心</a></li> -->
                 </ul>
             </div>
         </div>
@@ -67,26 +56,18 @@
                     </div>
                 </div>
                 <div class="header_ad">
-                    <a href="shop_list.html">
-                        <img src="images/pro1.png" alt="">
-                    </a>
-                    <a href="shop_list.html">
-                        <img src="images/pro2.png" alt="">
-                    </a>
+                    <a href="shop_list.html"><img src="images/pro1.png" alt=""></a>
+                    <a href="shop_list.html"><img src="images/pro2.png" alt=""></a>
                 </div>
             </div>
         </div>
         <div class="nav">
             <div class="containe">
                 <div class="menu">
-                    <h2 class="active">所有产品分类
-                        <img src="images/arrows_icon.png" alt="">
-                    </h2>
+                    <h2 class="active">所有产品分类 <img src="images/arrows_icon.png" alt=""></h2>
                     <ul class="submenu">
                         <li>
-                            <h3>
-                                <a href="shop_list.html">厨房小电</a>
-                            </h3>
+                            <h3><a href="shop_list.html">厨房小电</a></h3>
                             <ul>
                                 <li>
                                     <a href="shop_list.html">电饭煲</a>
@@ -102,13 +83,9 @@
                                 </li>
                             </ul>
                         </li>
+                        <li><i></i></li>
                         <li>
-                            <i></i>
-                        </li>
-                        <li>
-                            <h3>
-                                <a href="shop_list.html">炊具炖锅</a>
-                            </h3>
+                            <h3><a href="shop_list.html">炊具炖锅</a></h3>
                             <ul>
                                 <li>
                                     <a href="shop_list.html">烹任锅具</a>
@@ -127,13 +104,9 @@
                                 </li>
                             </ul>
                         </li>
+                        <li><i></i></li>
                         <li>
-                            <i></i>
-                        </li>
-                        <li>
-                            <h3>
-                                <a href="shop_list.html">养生水杯</a>
-                            </h3>
+                            <h3><a href="shop_list.html">养生水杯</a></h3>
                             <ul>
                                 <li>
                                     <a href="shop_list.html">电热水壶</a>
@@ -149,13 +122,9 @@
                                 </li>
                             </ul>
                         </li>
+                        <li><i></i></li>
                         <li>
-                            <i></i>
-                        </li>
-                        <li>
-                            <h3>
-                                <a href="shop_list.html">热卖产品</a>
-                            </h3>
+                            <h3><a href="shop_list.html">热卖产品</a></h3>
                             <ul>
                                 <li>
                                     <a href="shop_list.html">电饭煲</a>
