--- a/shop_cart.html
+++ b/shop_cart.html
@@ -231,7 +231,7 @@
                                     <input type="checkbox"  checked="checked" >
                                     <h3>染发膏</h3>
                                 </div> -->
-                        <ul class="item">
+                        <ul class="item" v-if="cartList.length!==0">
                             <li v-for="(pro,i) in  cartList" :class="{checked:pro.checked}">
                                 <div class="checkbox" @click="checkPro(i)">
                                     <span :class="{boxchecked:pro.checked}"></span>
@@ -255,7 +255,7 @@
                                 <span class="price">{{pro.goods_price}}</span>
                                 <div class="count">
                                     <button class="down" @click="downQty(i)">-</button>
-                                    <input type="text" :value="pro.goods_quantity">
+                                    <input type="text" :value="pro.goods_quantity" :id="'proQty'+i" @input="inputEven(i)" @change="changeQty(i)">
                                     <button class="add" @click="addQty(i)">+</button>
                                 </div>
                                 <div class="subtotal">
@@ -266,6 +266,7 @@
                                 </div>
                             </li>
                         </ul>
+                        <h5 v-else style="text-align: center;margin-top: 20px;">购物车空空如也哦！快<a style="color:red;font-size: 1em;text-decoration: underline;margin: 0 3px;" href="shop_list.html">去逛逛</a>吧</h5>
                     </div>
                     <div class="result">
                         <div class="handler">
